# dodo-payments-assignment

./: .dockerignore  .env.example  .gitignore  API.md  Cargo.toml  DESIGN.md  Dockerfile  Makefile  README.md  docker-compose.yaml  liquibase.properties  sqlx.toml  walkthrough.md
.sqlx/: query-023ecf7d76048d02c79fd07007842593feda30b75c2ccb99c41a37d01f3ab4d6.json  query-06367ab42ac0fa20114862b864451027d74af90247c3291266c18a5a40caeac1.json  query-37db83ed90c57a971b594d2668b84a3f2d957527e7b3eefe682d22f8cee7d88b.json  query-8b2bf96c690dbeae0f3b45fed554a9096326607c1bd570cc31a29f2d366c646b.json
db/changelog/: db.changelog-master.yaml
db/changelog/2025.1.0/: 001-extensions.yaml  001-triggers.yaml  release-changes.yaml
docs/: current-progress-report.md  problem-statement-and-development-plan.md  roadmap.md
src/: main.rs
src/application/: mod.rs  state.rs
src/application/dto/: account_dto.rs  mod.rs  transaction_dto.rs  webhook_dto.rs
src/application/services/: account_service.rs  auth_service.rs  mod.rs  transaction_service.rs  webhook_service.rs
src/domain/: mod.rs
src/domain/entities/: account.rs  api_key.rs  mod.rs  transaction.rs  webhook.rs
src/infrastructure/: mod.rs
tests/: account_service_tests.rs  api_key_repository_tests.rs  database_pool_test.rs  idempotency_tests.rs  integration_tests.rs  rate_limit_tests.rs  repository_tests.rs  reqwest_webhook_dispatcher_tests.rs  transaction_repository_tests.rs  transaction_service_tests.rs  webhook_dispatcher_tests.rs  webhook_endpoints_tests.rs  webhook_entity_tests.rs  webhook_repository_tests.rs
(+41 files in other folders)
