[package]
name = "dodo-payments-assignment"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web Framework
axum = "0.8.1"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "rust_decimal"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time & IDs
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Money handling
rust_decimal = { version = "1.36", features = ["serde", "macros"] }

# Security
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"

# Configuration
dotenvy = "0.15"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP Client (for webhooks)
reqwest = { version = "0.12", features = ["json"] }

# Error Handling
thiserror = "2.0.11"
anyhow = "1.0"
async-trait = "0.1.85"
config = "0.15.6"
rand = { version = "0.9.2", features = ["std", "std_rng"] }
governor = "0.6"
dashmap = "6.0"

[dev-dependencies]
tokio-test = "0.4"
serial_test = "3.0"
rust_decimal_macros = "1.36"
